clusters/common/apps/ai/open-webui/egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ottawa-windows-desktop
  annotations:
    tailscale.com/tailnet-ip: 192.168.169.112
    tailscale.com/proxy-class: common-egress
spec:
  externalName: placeholder
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: ottawa-windows-desktop-pg
  annotations:
    tailscale.com/tailnet-ip: 192.168.169.112
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  # ports:
  # - name: http
  #   port: 11434
  #   protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kirito
  annotations:
    tailscale.com/tailnet-fqdn: kirito.keiretsu.ts.net
    tailscale.com/proxy-class: common-egress
spec:
  externalName: placeholder
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: kirito-pg
  annotations:
    tailscale.com/tailnet-fdqn: kirito.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http
    port: 11434
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kirito-generic
  annotations:
    tailscale.com/tailnet-fdqn: kirito.keiretsu.ts.net
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http
    port: 11434
    protocol: TCP
